--- a/config/terminator/config
+++ b/config/terminator/config
@@ -2,15 +2,16 @@
   always_split_with_profile = True
   borderless = True
   enabled_plugins = InactivityWatch, LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
+  extra_styling = False
   focus = mouse
   inactive_color_offset = 0.77
   suppress_multiple_term_dialog = True
   tab_position = hidden
   title_font = Space Mono 9
   title_hide_sizetext = True
-  title_inactive_bg_color = "#0b0b0b"
+  title_inactive_bg_color = "#202124"
   title_inactive_fg_color = "#777777"
-  title_transmit_bg_color = "#0b0b0b"
+  title_transmit_bg_color = "#202124"
   title_use_system_font = False
   window_state = maximise
 [keybindings]
@@ -27,15 +28,19 @@
 [plugins]
 [profiles]
   [[default]]
-    background_color = "#0b0b0b"
+    background_color = "#202124"
     background_darkness = 0.94
-    background_image = None
     copy_on_selection = True
+    cursor_color = "#eff0eb"
     cursor_shape = underline
     custom_command = bash
     font = Space Mono 10
     foreground_color = "#eff0eb"
     palette = "#282a36:#ff5c57:#5af78e:#f3f99d:#57c7ff:#ff6ac1:#9aedfe:#eff0eb:#282a36:#ff5c57:#5af78e:#f3f99d:#57c7ff:#ff6ac1:#9aedfe:#eff0eb"
+    scrollbar_position = hidden
     show_titlebar = False
     use_custom_command = True
     use_system_font = False
+  [[New Profile]]
+    background_color = "#313131"
+    cursor_color = "#aaaaaa"
