--- a/config/terminator/config
+++ b/config/terminator/config
@@ -41,6 +41,8 @@
     show_titlebar = False
     use_custom_command = True
     use_system_font = False
-  [[New Profile]]
-    background_color = "#313131"
+  [[new_colors]]
+    background_color = "#202124"
     cursor_color = "#aaaaaa"
+    foreground_color = "#eff0eb"
+    palette = "#3c3c3c:#ea3943:#73d216:#ffbd40:#2ceecc:#a69ef7:#06989a:#d3d7cf:#3c3c3c:#ea3943:#73d216:#ffbd40:#2ceecc:#a69ef7:#34e2e2:#f3f3f3"
