--- a/config/terminator/config
+++ b/config/terminator/config
@@ -44,5 +44,19 @@
   [[new_colors]]
     background_color = "#202124"
     cursor_color = "#aaaaaa"
+    font = SF Mono 10
     foreground_color = "#eff0eb"
     palette = "#3c3c3c:#ea3943:#73d216:#ffbd40:#2ceecc:#a69ef7:#06989a:#d3d7cf:#3c3c3c:#ea3943:#73d216:#ffbd40:#2ceecc:#a69ef7:#34e2e2:#f3f3f3"
+    use_system_font = False
+  [["test #1"]]
+    cursor_color = "#aaaaaa"
+    font = SF Mono 10
+    use_system_font = False
+  [["test #2"]]
+    cursor_color = "#aaaaaa"
+    font = Space Mono 10
+    use_system_font = False
+  [["test #3"]]
+    cursor_color = "#aaaaaa"
+    font = FiraFlott Medium 10
+    use_system_font = False
