--- a/config/vscode/User/settings.json
+++ b/config/vscode/User/settings.json
@@ -5,5 +5,6 @@
     "git.autofetch": true,
     "vsnotes.defaultNotePath": "/home/jarek/Notebook",
     "workbench.colorTheme": "Dracula At Night",
-    "workbench.activityBar.visible": true
+    "workbench.activityBar.visible": true,
+    "files.trimTrailingWhitespace": true
 }
