Updated configuration to cli tools

--- a/config/classifier/.classifier-master.conf
+++ b/config/classifier/.classifier-master.conf
@@ -3,11 +3,10 @@ Music: mp3, aac, flac, ogg, wma, m4a, aiff, wav, amr
 Videos: flv, ogv, avi, mp4, mpg, mpeg, 3gp, mkv, ts, webm, vob, wmv
 Pictures: png, jpeg, gif, jpg, bmp, svg, psd, tiff
 Archives: rar, zip, 7z, gz, bz2, tar, dmg, tgz, xz, iso, cpio
-Documents: txt, pdf, doc, docx, odf, xls, xlsv, xlsx, ppt, pptx, ppsx, odp, odt, ods, md, json, csv
-Books: mobi, epub, chm, azw3
-DEBPackages: deb
+Documents: txt, doc, docx, odf, xls, xlsv, xlsx, ppt, pptx, ppsx, odp, odt, ods, md, json, csv
+Books: mobi, epub, chm, azw3, pdf
+Packages: deb, rpm
 Programs: exe, msi
-RPMPackages: rpm
 WEBP: webp
 Xmind: xmind
 Web: ico, html
