Basic documents update

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 *.local
 theme/icons/*
-workspaceStorage
+config/vscode/User/workspaceStorage/*
+storage.db
+config/vscode/User/globalStorage/state.vscdb
